--- a/css/index.css
+++ b/css/index.css
@@ -1,24 +1,38 @@
 body {
-    background-image: url(../images/2591631.ai.svg);
+    background-image: url(../images/image.jpg);
     background-repeat: repeat;
     background-size: cover;
 }
 
 #DataDefiTitle {
     position: absolute;
-    top: 50%;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: bisque;
     font-size: 5vw;
     font-weight: bold;
     text-align: center;
-  }
-  
-  @media screen and (max-width: 768px) {
-    #DataDefiTitle {
-      font-size: 3vw;
-    }
-  }
-  
-  
+}
+
+.button {
+  display: inline-block;
+  padding: 15px 42px;
+  background-color: #000000;
+  color: bisque;
+  text-align: center;
+  text-decoration: none;
+  font-size: 19px;
+  border: none;
+  cursor: pointer;
+  margin: 20px;
+  border-radius: 10px;
+}
+
+.buttonsAccueil {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
