--- a/css/connexion.css
+++ b/css/connexion.css
@@ -1,15 +1,9 @@
 .fond {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    background-image: linear-gradient(100deg, #0e8769 0%, #0c71c3 100%) !important;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    place-items: center;
 
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,6 +19,12 @@ html {
     place-items: center;
 
 
+}
+
+body {
+    background-image: url(../images/image.jpg);
+    background-repeat: repeat;
+    background-size: cover;
 }
 
 
@@ -162,4 +162,9 @@ form .signup-link a {
 form .pass-link a:hover,
 form .signup-link a:hover {
     text-decoration: underline;
+}
+
+.error {
+    border: 2px solid red !important;
+
 }
