--- a/css/navbar.css
+++ b/css/navbar.css
@@ -16,25 +16,25 @@
     padding: 0.4rem 0;
     text-align: center;
     text-decoration: none;
-
-
+    font-weight: bold; /* Mettre en gras */
+    font-size: 20px; /* Taille de la police */
 }
 
 .hover-underline-animation {
     display: inline-block;
     position: relative;
-    color: #0087ca;
+    color: bisque;
 }
 
 .hover-underline-animation::after {
     content: '';
     position: absolute;
-    width: 100%;
+    width: 100%;    
     transform: scaleX(0);
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #0087ca;
+    background-color: bisque;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
 }
@@ -68,19 +68,18 @@
     top: 0;
     z-index: 10000;
     width: 100%;
-    background-color: white;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 878px) {
     #navbar {
-        height: 150px;
+        height: 250px;
         /* Hauteur souhaitée pour les appareils plus petits */
     }
 }
 
 @media screen and (max-width: 400px) {
     #navbar {
-        height: 300px;
+        height: 350px;
         /* Hauteur souhaitée pour les appareils plus petits */
     }
     
@@ -89,3 +88,4 @@
 body{
     margin-top: 14vh; /* Ajustez la valeur selon la hauteur de votre navbar */
 }
+
