--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ body {
 .button {
   display: inline-block;
   padding: 15px 42px;
-  background-color: #000000;
+  background-color: #172A3A;
   color: bisque;
   text-align: center;
   text-decoration: none;
