--- a/css/datainfo.css
+++ b/css/datainfo.css
@@ -4,3 +4,56 @@ body {
     background-size: cover;
 }
 
+.tableinfo {
+    margin-top: 200px;
+    border-collapse: collapse;
+    width: 100%;
+    font-size: 14px;
+    background-color: black;
+}
+
+.tableinfo th, .tableinfo td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    color: wheat;
+}
+
+.tableinfo tr:nth-child(even) {
+    background-color: #5e5e5e;
+}
+
+.tableinfo2 td {
+    background-color: #5e5e5e;
+}
+
+.titredatainfo {
+    margin-top: 50pm;
+    text-align: center;
+    font-size: 100px;
+}
+
+.tableinfo2 {
+    margin-top: 0px;
+    border-collapse: collapse;
+    width: 30%;
+    font-size: 13px;
+    background-color: black;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.tableinfo2 th, .tableinfo2 td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    color: wheat;
+}
+
+.tableinfo2 td {
+    background-color:grey;
+}
+
+.tableinfo2 tr:nth-child(even) {
+    background-color:grey;
+}
+
+
