--- a/css/gagnants.css
+++ b/css/gagnants.css
@@ -11,7 +11,7 @@
     justify-content: center;
     /*align-items: center;*/
     background-color: grey;
-
+    box-sizing: border-box;
 
 }
 
@@ -30,17 +30,16 @@ body {
     background-image: url(../images/image.jpg);
     background-repeat: repeat;
     background-size: cover;
-}
-
-
-body {
-font-family: sans-serif;
+    font-family: sans-serif;
 }
 
 .container {
-display: flex;
-align-items: flex-end;
-height: 400px;
+    padding: 10;
+    display: flex;
+    align-items: flex-end;
+    height: 400px;
+    width: 50%;
+    box-sizing: border-box;
 }
 
 .podium__item {
