--- a/css/gererCompte.css
+++ b/css/gererCompte.css
@@ -24,6 +24,7 @@ body {
     border-spacing: 0;
     text-align: center;    
     border: 5px solid #172A3A;
+    margin-bottom: 2em;
 
 }
 
@@ -72,3 +73,23 @@ body {
 .divElement{
     margin-top: 1em;
 }
+
+.type{
+    text-align: center;
+    margin-bottom: 3em;
+}
+
+.button {
+    display: inline-block;
+    padding: 15px 42px;
+    background-color: #172A3A;
+    color: bisque;
+    text-align: center;
+    text-decoration: none;
+    font-size: 19px;
+    border: none;
+    cursor: pointer;
+    margin: 20px;
+    border-radius: 10px;
+  }
+  
