--- a/css/creerChallengeBattle.css
+++ b/css/creerChallengeBattle.css
@@ -3,13 +3,15 @@ body {
     background-repeat: repeat;
     background-size: contain;
 }
+
 .body {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
-    }
+}
+
 .container {
     max-width: 700px;
     width: 100%;
@@ -66,6 +68,7 @@ form .input-box span.details {
     transition: all 0.3s ease;
 }
 
+textarea:focus,
 .user-details .input-box input:focus {
     border-color: #172A3A;
 }
@@ -148,29 +151,65 @@ form .button input:hover {
     }
 }
 
-.erreur{
+.erreur {
     border: 2px solid red !important;
     color: red;
     font-size: 12px;
     font-weight: 500;
     margin-bottom: 5px;
 }
-.erreurRadio{
+
+.erreurRadio {
     color: red;
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 5px;
 }
 
-.list-group{
+.list-group {
     position: absolute;
-    height: 50px; /* Définissez ici la taille fixe souhaitée */
+    height: 50px;
+    /* Définissez ici la taille fixe souhaitée */
     overflow: scroll;
-    z-index: 9999; /* Pour s'assurer que la div se superpose aux autres contenus */
+    z-index: 9999;
+    /* Pour s'assurer que la div se superpose aux autres contenus */
     background-color: rgb(255, 255, 255);
-    opacity: 1; /* Définissez ici l'opacité souhaitée pour la div de suggestions */
+    opacity: 1;
+    /* Définissez ici l'opacité souhaitée pour la div de suggestions */
     width: 349px;
     display: none;
-    border : 1px solid #172A3A;
+    border: 1px solid #172A3A;
     border-radius: 5px;
 }
+
+textarea {
+    resize: vertical;
+    height: 45px;
+    width: 100%;
+    outline: none;
+    font-size: 16px;
+    border-radius: 5px;
+    padding-left: 15px;
+    border: 1px solid #ccc;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+}
+
+.typeB{
+    text-align: center;
+    margin-top: 10em;
+}
+
+.buttonB {
+    display: inline-block;
+    padding: 15px 42px;
+    background-color: #172A3A;
+    color: bisque;
+    text-align: center;
+    text-decoration: none;
+    font-size: 19px;
+    border: none;
+    cursor: pointer;
+    margin: 20px;
+    border-radius: 10px;
+}  
