--- a/css/datainfo.css
+++ b/css/datainfo.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(../images/image.jpg);
     background-repeat: repeat;
-    background-size: cover;
+    background-size: contain;
 }
 
 .tableinfo {
