--- a/css/gagnants.css
+++ b/css/gagnants.css
@@ -28,7 +28,7 @@
 body {
     background-image: url(../images/image.jpg);
     background-repeat: repeat;
-    background-size: cover;
+    background-size: contain;
 }
 
 .container {
