--- a/css/datainfo.css
+++ b/css/datainfo.css
@@ -4,7 +4,17 @@ body {
     background-size: contain;
 }
 
-.tableinfo {
+
+.titre {
+    margin-top: 1.6em;
+    text-align: center;
+    font-size: 100px;
+    color: bisque;
+
+}
+
+
+.table {
     margin-top: 1em;
     width: 100%;
     font-size: 14px;
@@ -15,63 +25,66 @@ body {
     border-spacing: 0;
     text-align: center;    
     border: 5px solid #172A3A;
+    margin-bottom: 2em;
 
 }
 
-
-
-.tableinfo th, .tableinfo td {
+.table th,
+.table td {
     border: 1px solid #172A3A;
     padding: 10px;
     color: wheat;
-    
 }
 
-.tableinfo tr:nth-child(even) {
+.table td {
     background-color: #824C71;
 }
 
-.tableinfo2 td {
+.table tr:nth-child(even) {
     background-color: #824C71;
 }
 
-.titredatainfo {
+.buttonTd {
+    text-align: center;
+}   
+
+
+
+
+.titre2{
     margin-top: 1.6em;
-    text-align: center;
-    font-size: 100px;
     color: bisque;
-
-}
-
-.tableinfo2 {
-    margin-top: 10px;
-    border-collapse: collapse;
-    width: 30%;
-    font-size: 13px;
-    background-color: black;
-    margin-left: auto;
-    margin-right: auto;
-    border-collapse: separate;
+    font-size: 2em;
+    background-color: #172A3A;
+    display: inline;
     border-radius: 20px;
-    overflow: hidden;
-    border-spacing: 0;
-    text-align: center;
     border: 5px solid #172A3A;
-
 }
 
-.tableinfo2 th, .tableinfo2 td {
-    border: 1px solid #172A3A;
-    padding: 10px;
+.divElement{
+    margin-top: 1em;
+}
+
+
+
+.vide{
+    margin-top: 1em;
+    text-align: center;
+    font-size: 2em;
+    color: #9b1e1e;
+    font-weight: bold;
+    display: inline;
+    background-color: bisque;
+    border-radius: 20px;
+    border: 5px solid bisque;
+}  
+
+.consulterBtn {
+    border-radius: 20px;
+    padding: 10px 20px;
+    background-color: #E5D0E3;
     color: #172A3A;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
 }
-
-.tableinfo2 td {
-    background-color:#E5D0E3;
-}
-
-.tableinfo2 tr:nth-child(even) {
-    background-color:#E5D0E3;
-}
-
-
