--- a/css/creerQuestionnaire.css
+++ b/css/creerQuestionnaire.css
@@ -11,19 +11,17 @@ main {
     padding: 10px;
     }
 .container {
+    margin-top: 5em;
     max-width: 700px;
     width: 100%;
     background-color: #fff;
     padding: 25px 30px;
     border-radius: 5px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    min-height: 10em;
 }
 
-#conteneur-questions textarea {
-    resize:none;
-    width: 660px;
-    font-size: 16px;
-}
+
 
 .container .title {
     font-size: 25px;
@@ -169,4 +167,32 @@ form .button input:hover {
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 5px;
+}
+textarea {
+    resize: vertical;
+    height: 45px;
+    width: 100%;
+    outline: none;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+}
+textarea:focus {
+    border-color: #172A3A;
+}
+.input-box input {
+    height: 45px;
+    width: 100%;
+    outline: none;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+}
+
+.input-box input:focus {
+    border-color: #172A3A;
 }
