--- a/css/mesEquipes.css
+++ b/css/mesEquipes.css
@@ -57,21 +57,27 @@ table{
     text-align: center;
     justify-content: center;
     font-size: 20px;
+    border-collapse: collapse; /* Fusionne les bordures des cellules */
     width: 100%;
 }
+th,
 td{
-    padding: 1.5em;
+    padding: 5%;
+    border-bottom: 1px solid wheat;
+    text-align: center;
+    vertical-align: middle; /* Centre le contenu verticalement */
 }
 
 .rendre{
     text-decoration: none;
-    color: bisque;
-    background-color: #172A3A;
+    color: #172A3A;
+    background-color: wheat;
     border-radius: 20px;
-    border: 5px solid #172A3A;
+    border: 5px solid wheat;
 }
 .rendre:hover{
     background-color: #824C71;
     color: bisque;
     border: 5px solid #824C71;
 }
+
