--- a/css/mesEquipes.css
+++ b/css/mesEquipes.css
@@ -5,7 +5,7 @@
     margin-top: 1em ;
     margin-left: auto;
     margin-right: auto; 
-    width: 50%;
+    width: 55%;
     height: 100%;
     justify-content: center;
     align-items: center;
@@ -28,7 +28,7 @@
 body {
     background-image: url(../images/image.jpg);
     background-repeat: repeat;
-    background-size: cover;
+    background-size: contain;
 }
 
 .container {
@@ -46,10 +46,10 @@ body {
 }
 
 .content{
-    margin-top: 1.6em;
     text-align: center;
     justify-content: center;
     font-size: 20px;
+    width: 100%;
 }
 
 table{
