--- a/css/consulter.css
+++ b/css/consulter.css
@@ -51,12 +51,9 @@ body {
 
 .divRetour{
     margin-left: 25%;    
-
 }
 
-
-
-.btnRetour{
+.btn{
     border: none;
     background-color: #172A3A;
     color: bisque;
@@ -65,7 +62,7 @@ body {
     padding: 0.5em;
 }
 
-.btnRetour:hover{
+.btn:hover{
     background-color: #824C71;
     color: bisque;
     font-size: 1.5em;
