--- a/css/register.css
+++ b/css/register.css
@@ -66,8 +66,7 @@ form .input-box span.details {
     transition: all 0.3s ease;
 }
 
-.user-details .input-box input:focus,
-.user-details .input-box input:valid {
+.user-details .input-box input:focus {
     border-color: #172A3A;
 }
 
@@ -180,3 +179,22 @@ form .button input:hover {
     font-weight: 500;
     margin-bottom: 5px;
 }
+
+.typeB{
+    margin-top: 10em;
+    text-align: center;
+}
+
+.buttonB {
+    display: inline-block;
+    padding: 15px 42px;
+    background-color: #172A3A;
+    color: bisque;
+    text-align: center;
+    text-decoration: none;
+    font-size: 19px;
+    border: none;
+    cursor: pointer;
+    margin: 20px;
+    border-radius: 10px;
+  }
