--- a/css/consulter.css
+++ b/css/consulter.css
@@ -60,12 +60,26 @@ body {
     font-size: 1.5em;
     border-radius: 20px;
     padding: 0.5em;
+    text-decoration: none;
 }
 
 .btn:hover{
     background-color: #824C71;
+}
+
+.btn-creer{
+    border: none;
+    background-color: #824C71;
     color: bisque;
-    font-size: 1.5em;
+    font-size: 14px;
     border-radius: 20px;
     padding: 0.5em;
+    text-decoration: none;
 }
+
+.btn-creer:hover{
+    font-size: 15px;
+}
+
+
+
