--- a/css/creerChallengeBattle.css
+++ b/css/creerChallengeBattle.css
@@ -212,4 +212,9 @@ textarea {
     cursor: pointer;
     margin: 20px;
     border-radius: 10px;
-}  
+}
+
+#container-challenge {
+    height: 710px;
+    overflow-y : auto;
+}
