--- a/css/monProfil.css
+++ b/css/monProfil.css
@@ -5,10 +5,12 @@ body {
 }
 
 /* Styles généraux */
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #f2f2f2;
+
+.titre{
+  margin-top: 1.6em;
+  text-align: center;
+  font-size: 100px;
+  color: bisque;
 }
 
 .container {
@@ -19,11 +21,11 @@ body {
 
 h1 {
   text-align: center;
-  color: #333;
+  color: bisque;
 }
 
 h2 {
-  color: #555;
+  color: bisque;
 }
 
 .table {
@@ -36,10 +38,11 @@ h2 {
   padding: 10px;
   text-align: left;
   border-bottom: 1px solid #ccc;
+  color: bisque;
 }
 
 .buttonModif {
-  background-color: #4CAF50;
+  background-color: #824C71;
   color: white;
   border: none;
   padding: 5px 10px;
@@ -52,7 +55,7 @@ h2 {
 }
 
 .buttonModif:hover {
-  background-color: #45a049;
+  background-color: #E5D0E3;
 }
 
 .consulterBtn {
@@ -73,23 +76,20 @@ h2 {
 }
 
 /* Styles spécifiques */
-.titre {
-  margin-bottom: 20px;
-  color: #333;
-}
+
 
 .titre2 {
   margin-bottom: 10px;
-  color: #555;
+  color: bisque;
 }
 
 .divElement {
-  margin-bottom: 30px;
-  margin-top: 300px;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  background-color: #172A3A;
+  border-radius: 20px;
+  margin-bottom: 2em;
+  border: 10px solid #172A3A;
+
 }
 
 .divTitre {
@@ -97,21 +97,34 @@ h2 {
 }
 
 .dateFin {
-  color: red;
+  color: red !important;
 }
 
 .table3 {
   width: 100%;
   border-collapse: collapse;
   background-color: white;
+  border-radius: 20px;
 }
 
 .table3 th,
 .table3 td {
   padding: 8px;
-  border: 1px solid #ddd;
+  border: 1px solid #E5D0E3;
+  color: #172A3A;
+  background-color: #E5D0E3;
+  text-align: center;
 }
 
 .table3 th {
-  background-color: #f2f2f2;
+  background-color: #824C71;
+}
+
+.quitter{
+  border-radius: 20px;
+  padding: 10px 20px;
+  background-color: #9b1e1e;
+  color: #fff;
+  border: none;
+  cursor: pointer;
 }
