--- a/css/lesReponses.css
+++ b/css/lesReponses.css
@@ -160,3 +160,33 @@ form .button input:hover {
     cursor: pointer;
     text-decoration: none;
 }
+
+.type{
+    text-align: center;
+    margin-bottom: 3em;
+}
+
+.button {
+    display: inline-block;
+    padding: 15px 42px;
+    background-color: #172A3A;
+    color: bisque;
+    text-align: center;
+    text-decoration: none;
+    font-size: 19px;
+    border: none;
+    cursor: pointer;
+    margin: 20px;
+    border-radius: 10px;
+}
+.vide{
+    margin-top: 1em;
+    text-align: center;
+    font-size: 2em;
+    color: #9b1e1e;
+    font-weight: bold;
+    display: inline;
+    background-color: bisque;
+    border-radius: 20px;
+    border: 5px solid bisque;
+}  
