--- a/css/gererGroupe.css
+++ b/css/gererGroupe.css
@@ -182,3 +182,19 @@ form .button input:hover {
     font-weight: 500;
     margin-bottom: 5px;
 }
+
+
+
+.btn{
+    border: none;
+    background-color: #172A3A;
+    color: bisque;
+    font-size: 1.5em;
+    border-radius: 20px;
+    padding: 0.5em;
+    text-decoration: none;
+}
+
+.btn:hover{
+    background-color: #824C71;
+}
