--- a/css/creerQuestionnaire.css
+++ b/css/creerQuestionnaire.css
@@ -19,6 +19,7 @@ main {
     border-radius: 5px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
     min-height: 10em;
+    overflow: auto;
 }
 
 
