--- a/css/lesReponses.css
+++ b/css/lesReponses.css
@@ -108,7 +108,7 @@ input[type="radio"]:checked+.rating-label {
     font-size: 12px;
 }
 
-form .button input {
+form .button2 input {
 height: 5%;    width: 30%;
     border-radius: 5px;
 
@@ -123,7 +123,7 @@ height: 5%;    width: 30%;
     
 }
 
-form .button input:hover {
+form .button2 input:hover {
     /* transform: scale(0.99); */
     background: linear-gradient(-135deg, #1ECECC, #29BABB);
 }   
@@ -189,4 +189,9 @@ form .button input:hover {
     background-color: bisque;
     border-radius: 20px;
     border: 5px solid bisque;
-}  
+}
+
+.divErreur{
+    display: flex;
+    justify-content: center;
+}
